--- a/VARTHEME_BS5_SUBTHEME/scss/vartheme_bs5-variables.scss
+++ b/VARTHEME_BS5_SUBTHEME/scss/vartheme_bs5-variables.scss
@@ -51,4 +51,4 @@ $hero-min-height-md: 600px;
 $hero-max-height-md: 600px;
 
 $hero-container-v-padding: 60px;
-
+$hero-container-h-padding-sm: 80px;
