--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -64,14 +64,15 @@ $hero-min-height: 300px;
 $hero-max-height: 300px;
 
 // For screen size sm and more.
-$hero-min-height-sm: 300px;
-$hero-max-height-sm: 300px;
+$hero-min-height-sm: 400px;
+$hero-max-height-sm: 400px;
 
 // For screen size md and more.
 $hero-min-height-md: 600px;
 $hero-max-height-md: 600px;
 
 $hero-container-v-padding: 60px;
+$hero-container-h-padding-sm: 80px;
 
 
 // #############################################################################
